--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>ch.zizka.csvcruncher</groupId>
     <artifactId>csv-cruncher</artifactId>
-    <version>2.4.2-SNAPSHOT</version>
+    <version>2.4.1</version>
 
     <name>CsvCruncher</name>
     <description>Treats CSV or JSON files as SQL tables, and exports SQL SELECTs back to CSV or JSON.</description>
@@ -14,12 +14,13 @@
     <scm>
         <url>https://github.com/OndraZizka/csv-cruncher</url>
         <developerConnection>scm:git:git@github.com:OndraZizka/csv-cruncher.git</developerConnection>
-      <tag>HEAD</tag>
+      <tag>csv-cruncher-2.4.1</tag>
   </scm>
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <version.kotlin>1.7.21</version.kotlin>
+        <version.kotlin-dokka>1.7.20</version.kotlin-dokka>
         <version.jdk>11</version.jdk>
         <version.jackson>2.14.1</version.jackson>
         <version.surefire>3.0.0-M7</version.surefire>
@@ -341,12 +342,12 @@
                     <plugin>
                         <groupId>org.jetbrains.dokka</groupId>
                         <artifactId>dokka-maven-plugin</artifactId>
-                        <version>0.9.15</version>
+                        <version>${version.kotlin-dokka}</version>
                         <executions>
                             <execution><id>dokka-site</id><phase>pre-site</phase><goals><goal>dokka</goal></goals></execution>
                             <execution><id>dokka-jar</id><phase>package</phase><goals><goal>javadocJar</goal></goals></execution>
                         </executions>
-                        <configuration><dokkaPlugins><plugin><groupId>org.jetbrains.dokka</groupId><artifactId>kotlin-as-java-plugin</artifactId><version>${version.kotlin}</version></plugin></dokkaPlugins></configuration>
+                        <configuration><dokkaPlugins><plugin><groupId>org.jetbrains.dokka</groupId><artifactId>kotlin-as-java-plugin</artifactId><version>${version.kotlin-dokka}</version></plugin></dokkaPlugins></configuration>
                     </plugin>
 
                     <!-- Release plugin -->
